# First

./: .gitignore  CMakeLists.txt
Physics/: CMakeLists.txt
Physics/include/: Atom.h  Basis.h  BoysFunction.h  BoysFunctions.h  ChemUtils.h  ContractedGaussianOrbital.h  DIIS.h  GaussianIntegral.h  GaussianKinetic.h  GaussianMoment.h  GaussianNuclear.h  GaussianOrbital.h  GaussianOverlap.h  GaussianTwoElectrons.h  HartreeFockAlgorithm.h  IntegralsRepository.h  MathUtils.h  Molecule.h  Orbital.h  PrimitiveShell.h  QuantumMatrix.h  QuantumNumbers.h  RestrictedHartreeFock.h  Tensor.h  TensorOrder3.h  TensorOrder4.h  Vector3D.h  pch.h
Physics/src/: Atom.cpp  Basis.cpp  BoysFunction.cpp  BoysFunctions.cpp  ChemUtils.cpp  ContractedGaussianOrbital.cpp  GaussianKinetic.cpp  GaussianMoment.cpp  GaussianNuclear.cpp  GaussianOrbital.cpp  GaussianOverlap.cpp  GaussianTwoElectrons.cpp  HartreeFockAlgorithm.cpp  IntegralsRepository.cpp  MathUtils.cpp  Molecule.cpp  Orbital.cpp  PrimitiveShell.cpp  QuantumMatrix.cpp  QuantumNumbers.cpp  RestrictedHartreeFock.cpp
src/: First.cpp
